clone playlist feature added

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  min-width: 100%;
 }
 
 a {
@@ -29,7 +30,6 @@ body {
   margin: 0;
   display: flex;
   min-height: 100vh;
-  max-height: 100vh;
   overflow: hidden;
 }
 
